# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"

[project]
name = "RC6Encryption"
version = "1.0.1"
dependencies = []
authors = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
maintainers = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
description = 'This package implements the RC6 encryption.'
readme = {file = "README.md", content-type = "text/markdown"}
# url = "https://github.com/mauricelambert/RC6Encryption"
# download-url = "https://mauricelambert.github.io/info/python/security/RC6Encryption.pyz"
classifiers = [
    "Topic :: Security",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: System Administrators",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
keywords = ['RC6', 'Encryption', 'Cipher', 'PurePython']
license = {text = "GPL-3.0 License"}
requires-python = ">=3.8"

[project.scripts]
RC6Encryption = "RC6Encryption:main"

[project.urls]
"Github" = "https://github.com/mauricelambert/RC6Encryption"
"Documentation" = "https://mauricelambert.github.io/info/python/security/RC6Encryption.html"
"Python Executable" = "https://mauricelambert.github.io/info/python/security/RC6Encryption.pyz"
"Windows Executable" = "https://mauricelambert.github.io/info/python/security/RC6Encryption.exe"

[tool.setuptools]
include-package-data = true
platforms = ['Windows', 'Linux', "MacOS"]
py-modules = ['RC6Encryption']
packages = []
script-files = []

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
