[metadata]
name = RC6Encryption
version = 1.0.1
author = Maurice Lambert
author_email = mauricelambert434@gmail.com
maintainer = Maurice Lambert
maintainer_email = mauricelambert434@gmail.com
description = This package implements the RC6 encryption.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mauricelambert/RC6Encryption
project_urls = Github=https://github.com/mauricelambert/RC6Encryption, Documentation=https://mauricelambert.github.io/info/python/security/RC6Encryption.html, Python Executable=https://mauricelambert.github.io/info/python/security/RC6Encryption.pyz, Windows Executable=https://mauricelambert.github.io/info/python/security/RC6Encryption.exe
download_url = https://mauricelambert.github.io/info/python/security/RC6Encryption.pyz
classifiers = 
	Topic :: Security
	Environment :: Console
	Operating System :: MacOS
	Natural Language :: English
	Programming Language :: Python
	Intended Audience :: Developers
	Topic :: Security :: Cryptography
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3.9
	Operating System :: Microsoft :: Windows
	Intended Audience :: System Administrators
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
keywords = RC6, Encryption, Cipher, PurePython
platforms = Windows, Linux, MacOS
license = GPL-3.0 License
license_files = LICENSE.txt

[options]
include_package_data = True
python_requires = >=3.8
scripts = 
packages = 
py_modules = RC6Encryption
install_requires = 

[options.entry_points]
console_scripts = 
	RC6Encryption = RC6Encryption:main

[egg_info]
tag_build = 
tag_date = 0

